完成角色内部路由资源查询
